Adds margin of error to 2nd-to-last question and clarifies assumptions about CLT.

--- a/mini-project_inferential_stats_1/inferential_stats_1.ipynb
+++ b/mini-project_inferential_stats_1/inferential_stats_1.ipynb
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "0.23"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have 130 observations. There is no exact minimum number of observations for  asymptotic properties to hold, since convergence to the normal distribution depends on many factors.  For our purposes, 130 is good enough, because none of our tests actually relies on the assumption of asymptotics.\n",
+    "We have 130 observations. There is no exact minimum number of observations for  asymptotic properties to hold, since convergence to the normal distribution depends on many factors.  For a simple t-test, 130 observation would almost certainly be enough (amongst other, because the t-test is pretty robust against all but the most extreme violations of its assumptions). \n",
+    "\n",
+    "However, our test does *not* rely on the CLT anyway: Since our sample seems to be normally distributed, our test statistic will also be normally distributed, and we therefore don't need the CLT and asymptotics. As a result, we don't have to worry about whether the size of the sample (except in so far as this increases the margin of error, but that is something we can observe directly).\n",
     "\n",
     "Now let's check for independence. Since we are dealing with cross-sectional observations, not a time-series, it is hard to imagine that the observations would be dependent. The only circumstance under which independence might conceivably be violated is a very specific form of measurement error that has memory (e.g., if the error at a point in time is the sum of measurement errors in the past).  Furthermore, note that even weak dependence would still be compatible with the Central Limit Theorem. Only if the dependence between observations is so strong as to make the process non-stationary would our results be invalidated.\n",
     "\n",
@@ -589,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +600,7 @@
        "Ttest_1sampResult(statistic=-5.4548232923645195, pvalue=2.4106320415561276e-07)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -639,7 +641,7 @@
        "(-5.4548232923645195, 4.9021570141012155e-08)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +743,7 @@
        "array([96.7, 99.5])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -757,14 +759,39 @@
     "       \n",
     "\n",
     "# Compute confidence intervals for an individual observation\n",
-    "bootstrap_ci_indiv(data=df.temperature)"
+    "ci_i = bootstrap_ci_indiv(data=df.temperature)\n",
+    "ci_i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Margin of error\n",
+    "m_b = (ci_i[1] - ci_i[0]) / 2\n",
+    "round(m_i, 2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The bootstrap test yields a 95% confidence interval from 96.7° to 99.5°F. The instructions don't say whether the sample excluded sick individuals.  However, even if it did not, the 95% confidence interval should largely exclude people with a fever, because at each point in time only a small percentage of people should suffer from it. \n",
+    "The bootstrap test yields a 95% confidence interval from 96.7° to 99.5°F, and the margin of error is 1.4°F. \n",
+    "\n",
+    "The instructions don't explicitly say whether the sample disregarded sick individuals.  However, even if it did not, the 95% confidence interval should largely exclude people with a fever, because at each point in time only a small percentage of people should suffer from it. \n",
     "\n",
     "These findings imply that the normal body temperature exhibits a sizable amount of individual variation. This means that it is hard to diagnose a fever unless we have that specific person's normal temperature from previous measurements, or unless the fever is sufficiently high.\n",
     "\n",
@@ -803,10 +830,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.4370125838276664"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Margin of error\n",
+    "m_p = (temperature_ci_classical[1] - temperature_ci_classical[0]) / 2\n",
+    "m_p"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The parametric confidence interval is similarly wide, from 96.8°F to 99.7°F.  Thus, it appears that there is indeed a considerable amount of individual variation."
+    "The parametric confidence interval is similarly wide, from 96.8°F to 99.7°F. The margin of error likewise is very close to the results from the bootstrap, at 1.4°F.  Thus, it appears that there is indeed a considerable amount of individual variation."
    ]
   },
   {
@@ -854,7 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +999,7 @@
        "array([-2.29,  0.02])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
