--- a/mini-project_inferential_stats_1/inferential_stats_1.ipynb
+++ b/mini-project_inferential_stats_1/inferential_stats_1.ipynb
@@ -358,19 +358,19 @@
     "    \"\"\"\n",
     "    Computes the p-value of a test statistic using bootstrap replicates.\n",
     "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    replicates: pd.Series\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    replicates : pd.Series\n",
     "        bootstrap replicates (i.e., the value of the test statistic for\n",
     "        each bootstrap sample.\n",
-    "    observed_stat: numeric\n",
+    "    observed_stat : numeric\n",
     "        Value of the test statistic in the actual sample.\n",
-    "    two_sided: bool, optional\n",
+    "    two_sided : bool, optional\n",
     "        Whether to conduct a one-sided or two-sided hypothesis test.\n",
     "        Default: True (two-sided).\n",
     "        \n",
-    "    Returns:\n",
-    "    --------\n",
+    "    Returns\n",
+    "    -------\n",
     "    numeric\n",
     "        p-value\n",
     "    \"\"\"\n",
@@ -402,15 +402,15 @@
     "       \n",
     "    Parameters\n",
     "    ----------\n",
-    "    data: Series or DataFrame\n",
+    "    data : Series or DataFrame\n",
     "        The data from which to sample the null hypothesis.\n",
-    "    statistic: function\n",
+    "    statistic : function\n",
     "        Test statistic to be calculated.\n",
-    "    stat_observed: numeric, optional\n",
+    "    stat_observed : numeric, optional\n",
     "        Observed test statistic. \n",
-    "    n_samples: int, optional \n",
+    "    n_samples : int, optional \n",
     "        The number of bootstrap samples to draw. Default: 10000.\n",
-    "    seed: int, optional\n",
+    "    seed : int, optional\n",
     "        Random seed for resampling. \n",
     "        \n",
     "    Returns\n",
@@ -516,13 +516,13 @@
     "    \n",
     "    Parameters\n",
     "    ----------\n",
-    "    data: Series or DataFrame\n",
+    "    data : Series or DataFrame\n",
     "        The data from which to sample the null hypothesis.\n",
-    "    test_value: numeric\n",
+    "    test_value : numeric\n",
     "        The mean under the null hypothesis.\n",
-    "    n_samples: int, optional \n",
+    "    n_samples : int, optional \n",
     "        The number of bootstrap samples to draw. Default: 10000.\n",
-    "    two_sided: bool, optional\n",
+    "    two_sided : bool, optional\n",
     "        Whether to conduct a one-sided or two-sided hypothesis test.\n",
     "        Default: True (two-sided).\n",
     "    \n",
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -743,7 +743,7 @@
        "array([96.7, 99.5])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
        "1.4"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -782,7 +782,7 @@
    "source": [
     "# Margin of error\n",
     "m_b = (ci_i[1] - ci_i[0]) / 2\n",
-    "round(m_i, 2)"
+    "round(m_b, 2)"
    ]
   },
   {
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
        "1.4370125838276664"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -887,6 +887,27 @@
     "    \"\"\"\n",
     "    Create a single permutation of the data, randomly assign groups, \n",
     "    and compute test statistic.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    df : pd.DataFrame\n",
+    "        The data frame where the relevant variables are located.\n",
+    "    v : str\n",
+    "        Name of the variable in the data frame that contains the\n",
+    "        data for which to compute means.\n",
+    "    group : str\n",
+    "        Name of the variable in the data frame that contains a\n",
+    "        categorical variable that identifies the two groups for\n",
+    "        which to compute the test statistic.\n",
+    "    statistic : function\n",
+    "        Function that returns the test statistic of interest.\n",
+    "    rng : np.RandomState instance\n",
+    "        Random number generator.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    numeric\n",
+    "        Value of the test statistic for the permutation sample.\n",
     "    \"\"\"\n",
     "\n",
     "    # Permute values\n",
@@ -903,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -921,20 +942,21 @@
    ],
    "source": [
     "def btest_2samp(df, v, group, statistic, n_permutations=10000):\n",
-    "    \"\"\"Performs a 2-sample hypothesis test using the bootstrap\n",
+    "    \"\"\"\n",
+    "    Performs a 2-sample hypothesis test using the bootstrap\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
-    "    df: pd.DataFrame\n",
+    "    df : pd.DataFrame\n",
     "        The data frame where the relevant variables are located.\n",
-    "    v: str\n",
+    "    v : str\n",
     "        Name of the variable in the data frame that contains the\n",
     "        data for which to compute means.\n",
-    "    group: str\n",
+    "    group : str\n",
     "        Name of the variable in the data frame that contains a\n",
     "        categorical variable that identifies the two groups for\n",
     "        which to compute the test statistic.\n",
-    "    n_permutations: numeric, optional\n",
+    "    n_permutations : numeric, optional\n",
     "        Number of bootstrap replicates.  Default: 10000\n",
     "\n",
     "    Returns\n",
@@ -990,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +1021,7 @@
        "array([-2.29,  0.02])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
