Expands on question 3.

--- a/mini-project_inferential_stats_2/inferential_statistics_exercise_2.ipynb
+++ b/mini-project_inferential_stats_2/inferential_statistics_exercise_2.ipynb
@@ -51,7 +51,10 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from scipy import stats"
+    "import scipy\n",
+    "from scipy import stats\n",
+    "\n",
+    "import pdb"
    ]
   },
   {
@@ -308,7 +311,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The most appropriate test for whether race has a significant impact on back is either a classical t-test for the mean, or a bootstrap test for the mean. In either case, we need to conduct a two-sample test, because we are comparing the mean in the sample resumes with white-sounding names with the mean in the sample with black-sounding names.\n",
+    "### What test is appropriate for this problem? Does CLT apply?\n",
+    "  The most appropriate test for whether race has a significant impact on callback is either a classical t-test for the mean, or a bootstrap test for the mean. In either case, we need to conduct a two-sample test, because we are comparing the mean in the sample of resumes with white-sounding names to the mean in the sample with black-sounding names.\n",
     "\n",
     "The assumptions of the CLT are satisfied: The samples are *independent*, because race is randomly assigned to the resumes. The samples are also * identically distributed*, because the resumes are randomly drawn from the same distribution of resumes. \n",
     "\n",
@@ -343,8 +347,10 @@
    "source": [
     "Since we have about 2500 observations per group, we can rely on the CLT to yield a normally distributed test-statistic.  This is helpful, since our dependent variable – whether the employer called back or not – is dichotomous, and thus follows a Bernoulli rather than a normal distribution.\n",
     "\n",
+    "### What are the null and alternate hypotheses?\n",
     "The null hypothesis is that the probability that an applicant receives a callback is equally likely for resumes with black- and white-sounding names. I chose a two-sided alternative hypothesis: The chance that an applicant receives a callback is *different* for black- and white-sounding names. Due to our large sample size – about 5000 – our test will have enough power to reach statistical significance even for insubstantial effect sizes anyway; therefore there is no reason to choose a  one-sided alternative hypothesis. In addition, this strategy would also enable us to detect the opposite pattern, namely if many employers actively tried to recruit black candidates to increase the diversity of their workforce.\n",
     "\n",
+    "### Compute margin of error, confidence interval, and p-value. Try using both the bootstrapping and the frequentist statistical approaches.\n",
     "Let's start by looking at the descriptive statistics:"
    ]
   },
@@ -453,10 +459,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "p-value:  0.0002\n"
+     ]
+    }
+   ],
    "source": [
+    "# Define function to permute data and compute test statistic\n",
     "def permutation_stat(dataframe, v, group, statistic, rng):\n",
     "    \"\"\"\n",
     "    Create a single permutation of the data, randomly assign groups, \n",
@@ -493,40 +508,27 @@
     "    \n",
     "    # Return test statistic\n",
     "    stat = statistic(group_1, group_2)\n",
-    "    return(stat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p-value:  0.0002\n"
-     ]
-    }
-   ],
-   "source": [
+    "    return(stat)\n",
+    "\n",
+    "\n",
+    "# Define function to calculate p-value\n",
     "def p_value(replicates, observed_stat, two_sided=True):\n",
     "    \"\"\"\n",
     "    Computes the p-value of a test statistic using bootstrap replicates.\n",
     "    \n",
-    "    Parameters:\n",
-    "    -----------\n",
-    "    replicates: pd.Series\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    replicates : pd.Series\n",
     "        bootstrap replicates (i.e., the value of the test statistic for\n",
     "        each bootstrap sample.\n",
-    "    observed_stat: numeric\n",
+    "    observed_stat : numeric\n",
     "        Value of the test statistic in the actual sample.\n",
-    "    two_sided: bool, optional\n",
+    "    two_sided : bool, optional\n",
     "        Whether to conduct a one-sided or two-sided hypothesis test.\n",
     "        Default: True (two-sided).\n",
     "        \n",
-    "    Returns:\n",
-    "    --------\n",
+    "    Returns\n",
+    "    -------\n",
     "    numeric\n",
     "        p-value\n",
     "    \"\"\"\n",
@@ -545,20 +547,21 @@
     "\n",
     "\n",
     "def btest_2samp(df, v, group, statistic, n_permutations=10000):\n",
-    "    \"\"\"Performs a 2-sample hypothesis test using the bootstrap\n",
+    "    \"\"\"\n",
+    "    Performs a two-sided two-sample hypothesis test using the bootstrap.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
-    "    df: pd.DataFrame\n",
+    "    df : pd.DataFrame\n",
     "        The data frame where the relevant variables are located.\n",
-    "    v: str\n",
+    "    v : str\n",
     "        Name of the variable in the data frame that contains the\n",
     "        data for which to compute means.\n",
-    "    group: str\n",
+    "    group : str\n",
     "        Name of the variable in the data frame that contains a\n",
     "        categorical variable that identifies the two groups for\n",
     "        which to compute the test statistic.\n",
-    "    n_permutations: numeric, optional\n",
+    "    n_permutations : numeric, optional\n",
     "        Number of bootstrap replicates.  Default: 10000\n",
     "\n",
     "    Returns\n",
@@ -604,7 +607,216 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We get a very similar result: The p-value is very close to 0 (to be precise, it is 0.02%). Thus, we clearly reject the null hypothesis that race doesn't have an impact on callback rate."
+    "The bootstrap likewise returns a p-value of close to zero (0.02%, to be exact). Thus, it likewise rejects the null hypothesis of no difference in callback rates at any reasonable significance level.\n",
+    "\n",
+    "Having establish that there is a significant difference between resumes with white and black names, let's now compute a 95% confidence interval for the effect size. This will also give us the margin of error.  Since we are dealing with proportions – which are naturally bounded between zero and one – the margin of error might not be symmetrical around the observed difference (which corresponds to the maximum likelihood estimate).  To simplify things, though, I will only compute the average margin of error, rather than calculating a separate margin of error for the low and the high. \n",
+    "\n",
+    "Like before, I will first computed it in the classical parametric way and then calculate it using the bootstrap. The first step is to investigate whether the variance in callback rates for whites and blacks are equal, because this will influence which assumptions we will be able to use."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.06 0.087\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Parametric confidence interval\n",
+    "# Sample variance of callback for black names \n",
+    "# (ddof adjusts degrees of freedoms)\n",
+    "var_b = np.var(data.loc[data.race=='b', 'call'], ddof=1)\n",
+    "# Sample variance of callback for white names\n",
+    "var_w = np.var(data.loc[data.race=='w', 'call'], ddof=1)\n",
+    "print(np.round_(var_b, 3), np.round_(var_w, 3))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It looks like the variances are not equal, so we will have to work with these separate variances rather than computing an overall variance of all callbacks. Unfortunately, this means that we would have to make a correction in the degrees of freedom for the t-distribution. To simplify this, I will use the normal distribution to approximate the t-distribution.  Since our sample size is so large (about 5000), the difference should be inconsequential."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classical confidence interval:\n",
+      "0   -0.047\n",
+      "1   -0.017\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Number of observations by race\n",
+    "n_race = data.race.value_counts()\n",
+    "\n",
+    "# Standard deviation for difference in mean callback\n",
+    "sd_diff = np.sqrt(var_b / n_race.loc['b'] +\n",
+    "                  var_w / n_race.loc['w'])\n",
+    "# Mean difference in callback\n",
+    "mean_diff = diff_in_means_df(data.loc[:, ['call', 'race']])\n",
+    "# Compute test statistic\n",
+    "z = mean_diff / sd_diff\n",
+    "\n",
+    "# 2.5th and 97.5th percentile of standard normal distribution\n",
+    "# (convert to pd.Series to allow broadcasting)\n",
+    "ci = pd.Series(scipy.stats.norm.interval(0.95)) \n",
+    "\n",
+    "# Confidence interval\n",
+    "ci_classical = (mean_diff + ci*sd_diff)\n",
+    "print('Classical confidence interval:\\n{}'\n",
+    "        .format(np.round_(ci_classical, \n",
+    "                       decimals=3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.015"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Margin of error\n",
+    "np.round_(\n",
+    "    (callback_ci_classical[1] - callback_ci_classical[0]) / 2,\n",
+    "     decimals=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0805"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# For comparison, get average callback rate\n",
+    "round(data.call.mean(), 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that we can be 95% confident that the true effect is between 1.7 and 4.7 percentage points. (To be precise, in repeated samples from the same data generating process, 95% of intervals created this way will contain the true effect.) The margin of error is 1.5 percentage points. \n",
+    "\n",
+    "This effect size is huge, given that the mean callback rate is only about 8%.\n",
+    "\n",
+    "Now let's calculate the confidence interval using the bootstrap, and see if we get similar results:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observed test statistic:  -0.032\n",
+      "Confidence Interval: [-0.048 -0.017]\n",
+      "Margin of Error: 0.015\n"
+     ]
+    }
+   ],
+   "source": [
+    "def bootstrap_ci(df, statistic, n_samples=10000, \n",
+    "                 q=[2.5, 97.5], decimals=3, seed=1):\n",
+    "    \"\"\"…\"\"\"\n",
+    "\n",
+    "    # Print observed value for test statistic\n",
+    "    observed_stat = statistic(df)\n",
+    "    print('Observed test statistic: ', \n",
+    "          np.round_(observed_stat, decimals))\n",
+    "    \n",
+    "    # Create random number generator\n",
+    "    rng = np.random.RandomState(seed)\n",
+    "    # Draw random samples from the data frame's index\n",
+    "    # (each column contains one bootstrap sample)\n",
+    "    global sample\n",
+    "    sample = rng.choice(df.index, (len(df.index), n_samples))\n",
+    "    # pdb.set_trace ()\n",
+    "    # For each sample of the index, compute test statistic\n",
+    "    replicates = np.zeros(n_samples)\n",
+    "    \n",
+    "    for sample_number in range(n_samples):\n",
+    "        # Get the sample index\n",
+    "        sample_index = sample[:, sample_number]\n",
+    "        # Get the corresponding data \n",
+    "        data = df.loc[sample_index, :]\n",
+    "        # Compute test statistic\n",
+    "        replicates[sample_number] = statistic(data)\n",
+    "        \n",
+    "    # Compute confidence interval\n",
+    "    ci = np.percentile(replicates, q)\n",
+    "    # Compute margin of error \n",
+    "    me = (ci[1] - ci[0]) / 2\n",
+    "     \n",
+    "    #  confidence interval\n",
+    "    print('Confidence Interval: {}\\nMargin of Error: {}'\n",
+    "            .format(np.round_(ci, decimals=decimals),\n",
+    "                    np.round_(me, decimals=decimals)))\n",
+    "    return(ci, me)\n",
+    "           \n",
+    "        \n",
+    "# Define a function that computes the difference in means from a data frame\n",
+    "def diff_in_means_df(df):\n",
+    "    \"\"\"\n",
+    "    Computes the difference in means between two groups in a data frame.\n",
+    "    \n",
+    "    The variable for which to compute the mean must be in the first column,\n",
+    "    The variable that contains the group name must be in the second column.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Group by the 2nd column and compute mean of the 1st column \n",
+    "    means = df.groupby(df.columns[1]).mean()\n",
+    "    return(means.iloc[0, 0] - means.iloc[1, 0])\n",
+    "\n",
+    "# Compute bootstrap confidence intervals margin of error \n",
+    "bootstrap_ci(data.loc[:, ['call', 'race']], diff_in_means_df);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This gives us virtually identical results. The reason is that the only advantage of the bootstrap is that it is able to model a potential deviation of the distribution from normality; however, due to the Central Limit Theorem in conjunction with the huge sample size (around 5000), the distribution of our test statistic is very close to normal."
    ]
   },
   {
@@ -621,16 +833,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Q4:**\n",
-    "It is long been suspected that many employers tend to discriminate against black applicants. In order to prove this, however, it is not enough to rely on anecdotal evidence or even observational data such as unequal representation. Instead, we need to conduct randomized experiments, where the difference between treatment and control group is the race of the applicant. This is commonly done with sending out resumes that have either white- or black-sounding names. \n",
+    "### Write a story describing the statistical significance in the context or the original problem.\n",
+    "It is long been suspected that many employers tend to discriminate against black applicants. In order to prove this, however, it is not enough to rely on anecdotal evidence or even observational data such as unequal representation. Instead, we need to conduct randomized experiments, where the difference between treatment and control group is the race of the applicant. This is commonly done by sending out resumes that have either white- or black-sounding names. \n",
     "\n",
-    "The data set analyzed here is very comprehensive: It contains data from 5000 such observations, split equally into treatment and control group.  This large sample size allows a precise estimation of the effect of race. Conducting a hypothesis test for equality of the mean yielded a p-value of virtually zero. This means that we can be almost certain that race has an effect whether an applicant receives a callback. In addition to the strong statistical significance, the effect size is also huge: Resumes with white-sounding names were about 50% more likely to get a callback.\n",
+    "The data set analyzed here can give us unique insight into this question because it is very comprehensive. It contains data from 5000 observations from such an experiment, split equally between treatment and control group.  This large sample size allows a precise estimation of the effect of race. Conducting a hypothesis test for whether it is plausible that race has no effect yields a p-value of virtually zero. Our best estimate is that having a black-sounding name reduces callback by about 3%; we can be 95% confident that the true effect lies between 1.7% and 4.8%.  Given that the mean callback rate is only 8%, this effect sizes very large.\n",
     "\n",
+    "### Does your analysis mean that race/name is the most important factor in callback success? Why or why not? If not, how would you amend your analysis?\n",
+    "Since this analysis did not control for any other variables, we cannot say how important race is compared to other factors. Because this question is definitely of interest, the next step would be to conduct a regression analysis, where we include the other variables available to us as predictors. This could tell us how important race is relative to other attributes of the applicant and various attributes of the job and employer. In addition, this would also allow us to investigate whether there are any variables that mediate the effect of race. (This could be done by including interaction terms.) For example, it might show that the negative impact of race is particularly high on some kinds of jobs and for some kinds of employers, while this negative effect is ameliorated or even turned positive for workplaces that value a diverse workforce. \n",
     "\n",
-    "**Q5:**\n",
-    "Since my analysis did not control for any other variables, we cannot say how important race is compared to other factors. Because this question is definitely of interest, the next step would be to conduct a regression analysis, where we include the other variables available to us as predictors. This could tell us how important race is relative to other attributes of the applicant and various attributes of the job and employer. In addition, this would also allow us to investigate whether there are any variables that mediate the effect of race. (This could be done by including interaction terms.) For example, it might show that the negative impact of race is particularly high on some kinds of jobs and for some kinds of employers, while this negative effect is ameliorated or even turned positive for workplaces that value a diverse workforce. \n",
-    "\n",
-    "That said, we still can be confident the effect of race is not caused by any confounding variables (i.e., that the effect would decrease if we controlled for other important factors). We know this because race was randomly assigned to the resumes. As a result, it is not possible that the real causal factor is merely another variable correlated with race (e.g., having a high school diploma from a lower-achieving school), because randomization broke up the correlation between race and all other potential factors."
+    "That said, we still can be confident the effect of race observed here is not caused by any confounding variables (i.e., that the effect would decrease if we controlled for other important factors). We know this because race was randomly assigned to the resumes. As a result, it is not possible that the real causal factor is merely another variable correlated with race (e.g., having a high school diploma from a lower-achieving school), because randomization broke up the correlation between race and all other potential factors in our sample."
    ]
   }
  ],
