Make a few small formatting changes.

--- a/mini-project_inferential_stats_2/inferential_statistics_exercise_2.ipynb
+++ b/mini-project_inferential_stats_2/inferential_statistics_exercise_2.ipynb
@@ -314,7 +314,7 @@
     "### What test is appropriate for this problem? Does CLT apply?\n",
     "  The most appropriate test for whether race has a significant impact on callback is either a classical t-test for the mean, or a bootstrap test for the mean. In either case, we need to conduct a two-sample test, because we are comparing the mean in the sample of resumes with white-sounding names to the mean in the sample with black-sounding names.\n",
     "\n",
-    "The assumptions of the CLT are satisfied: The samples are *independent*, because race is randomly assigned to the resumes. The samples are also * identically distributed*, because the resumes are randomly drawn from the same distribution of resumes. \n",
+    "The assumptions of the CLT are satisfied: The samples are *independent*, because race is randomly assigned to the resumes. The samples are also * identically distributed*, because the resumes are randomly drawn from the same set of resumes. \n",
     "\n",
     "Now let's look at how many observations of each group we have, so we can determine whether we can rely on asymptotics."
    ]
@@ -327,8 +327,8 @@
     {
      "data": {
       "text/plain": [
-       "b    2435\n",
        "w    2435\n",
+       "b    2435\n",
        "Name: race, dtype: int64"
       ]
      },
@@ -459,14 +459,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "p-value:  0.0002\n"
+      "p-value:  0.0\n"
      ]
     }
    ],
@@ -609,14 +609,14 @@
    "source": [
     "The bootstrap likewise returns a p-value of close to zero (0.02%, to be exact). Thus, it likewise rejects the null hypothesis of no difference in callback rates at any reasonable significance level.\n",
     "\n",
-    "Having establish that there is a significant difference between resumes with white and black names, let's now compute a 95% confidence interval for the effect size. This will also give us the margin of error.  Since we are dealing with proportions – which are naturally bounded between zero and one – the margin of error might not be symmetrical around the observed difference (which corresponds to the maximum likelihood estimate).  To simplify things, though, I will only compute the average margin of error, rather than calculating a separate margin of error for the low and the high. \n",
+    "Having establish that there is a significant difference between resumes with white and black names, let's now compute a 95% confidence interval for the effect size. This will also give us the margin of error.  Since we are dealing with proportions – which are naturally bounded between zero and one – the margin of error might not be symmetrical around the observed difference.  To simplify things, though, I will only compute the *average* margin of error, rather than calculating a separate margin of error for the low and the high. \n",
     "\n",
-    "Like before, I will first computed it in the classical parametric way and then calculate it using the bootstrap. The first step is to investigate whether the variance in callback rates for whites and blacks are equal, because this will influence which assumptions we will be able to use."
+    "Like before, I will first compute it in the classical parametric way and then calculate it using the bootstrap. The first step is to investigate whether the *variances* in callback rates for whites and blacks are equal, because this will influence which assumptions we will be able to use."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -641,12 +641,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It looks like the variances are not equal, so we will have to work with these separate variances rather than computing an overall variance of all callbacks. Unfortunately, this means that we would have to make a correction in the degrees of freedom for the t-distribution. To simplify this, I will use the normal distribution to approximate the t-distribution.  Since our sample size is so large (about 5000), the difference should be inconsequential."
+    "It looks like the variances are different, so we will have to work with these separate variances rather than computing an overall variance of all callbacks. Unfortunately, this means that we would have to make a correction in the degrees of freedom for the t-distribution. To simplify this, I will use the normal distribution to approximate the t-distribution.  Since our sample size is so large (about 5000), the difference should be inconsequential."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -663,6 +663,20 @@
     }
    ],
    "source": [
+    "# Define a function that computes the difference in means from a data frame\n",
+    "def diff_in_means_df(df):\n",
+    "    \"\"\"\n",
+    "    Computes the difference in means between two groups in a data frame.\n",
+    "    \n",
+    "    The variable for which to compute the mean must be in the first column,\n",
+    "    The variable that contains the group name must be in the second column.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Group by the 2nd column and compute mean of the 1st column \n",
+    "    means = df.groupby(df.columns[1]).mean()\n",
+    "    return(means.iloc[0, 0] - means.iloc[1, 0])\n",
+    "\n",
+    "\n",
     "# Number of observations by race\n",
     "n_race = data.race.value_counts()\n",
     "\n",
@@ -687,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +710,7 @@
        "0.015"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,13 +718,13 @@
    "source": [
     "# Margin of error\n",
     "np.round_(\n",
-    "    (callback_ci_classical[1] - callback_ci_classical[0]) / 2,\n",
+    "    (ci_classical[1] - ci_classical[0]) / 2,\n",
     "     decimals=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +733,7 @@
        "0.0805"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,7 +747,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that we can be 95% confident that the true effect is between 1.7 and 4.7 percentage points. (To be precise, in repeated samples from the same data generating process, 95% of intervals created this way will contain the true effect.) The margin of error is 1.5 percentage points. \n",
+    "We see that we can be 95% confident that the true effect is between 1.7 and 4.7 percentage points. (To be precise, in repeated samples from the same data generating process, 95% of intervals computed this way will contain the true effect.) The margin of error is 1.5 percentage points. \n",
     "\n",
     "This effect size is huge, given that the mean callback rate is only about 8%.\n",
     "\n",
@@ -742,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -769,19 +783,19 @@
     "    rng = np.random.RandomState(seed)\n",
     "    # Draw random samples from the data frame's index\n",
     "    # (each column contains one bootstrap sample)\n",
-    "    global sample\n",
-    "    sample = rng.choice(df.index, (len(df.index), n_samples))\n",
-    "    # pdb.set_trace ()\n",
+    "    global sample_indices\n",
+    "    sample_indices = rng.choice(df.index, (len(df.index), n_samples))\n",
+    "    \n",
     "    # For each sample of the index, compute test statistic\n",
     "    replicates = np.zeros(n_samples)\n",
-    "    \n",
     "    for sample_number in range(n_samples):\n",
     "        # Get the sample index\n",
-    "        sample_index = sample[:, sample_number]\n",
+    "        # pdb.set_trace ()\n",
+    "        sample_index = sample_indices[:, sample_number]\n",
     "        # Get the corresponding data \n",
-    "        data = df.loc[sample_index, :]\n",
+    "        sample = df.loc[sample_index, :]\n",
     "        # Compute test statistic\n",
-    "        replicates[sample_number] = statistic(data)\n",
+    "        replicates[sample_number] = statistic(sample)\n",
     "        \n",
     "    # Compute confidence interval\n",
     "    ci = np.percentile(replicates, q)\n",
@@ -795,19 +809,6 @@
     "    return(ci, me)\n",
     "           \n",
     "        \n",
-    "# Define a function that computes the difference in means from a data frame\n",
-    "def diff_in_means_df(df):\n",
-    "    \"\"\"\n",
-    "    Computes the difference in means between two groups in a data frame.\n",
-    "    \n",
-    "    The variable for which to compute the mean must be in the first column,\n",
-    "    The variable that contains the group name must be in the second column.\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Group by the 2nd column and compute mean of the 1st column \n",
-    "    means = df.groupby(df.columns[1]).mean()\n",
-    "    return(means.iloc[0, 0] - means.iloc[1, 0])\n",
-    "\n",
     "# Compute bootstrap confidence intervals margin of error \n",
     "bootstrap_ci(data.loc[:, ['call', 'race']], diff_in_means_df);"
    ]
@@ -816,17 +817,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This gives us virtually identical results. The reason is that the only advantage of the bootstrap is that it is able to model a potential deviation of the distribution from normality; however, due to the Central Limit Theorem in conjunction with the huge sample size (around 5000), the distribution of our test statistic is very close to normal."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "<div class=\"span5 alert alert-success\">\n",
-    "<p> Your answers to Q4 and Q5 here </p>\n",
-    "</div>"
+    "This gives us virtually identical results. This is because the only advantage of the bootstrap is that it is able to model a potential deviation of the distribution of the test statistic from normality. However, because the Central Limit Theore applies, and our sample size of around 5000 is large enough to take advantage of asymptotics, the distribution of our test statistic is very close to normal."
    ]
   },
   {
